made new changes to the about sections

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,32 +1,31 @@
 ## Projects
 
 <ProjectCard
-  title="Tips & Tricks for Gatsby"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  title="The Code Behind This Website"
+  link="https://github.com/preston-lai/website"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A collection of short, but useful quick tips shared by me and the community
-  about Gatsby. From GraphQL over local development to deployment.
+  My personal website featuring Parallax effects and animations. Built using JavaScript, MDX, Gatsby (Theme UI). Template by LekoArts!
 </ProjectCard>
+
 <ProjectCard
-  title="Setting  up a yarn Workspace"
-  link="https://www.lekoarts.de/javascript/setting-up-a-yarn-workspace-with-typescript-eslint-and-cypress?utm_source=cara&utm_medium=Theme"
+  title="CSV Feeder"
+  link="https://github.com/preston-lai/Link2Feed-Bot"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A robust solution for multi-package repositories.
+  A script used to input user data from a CSV file into the Link2Feed Software. Created using Python and the Selenium API.
 </ProjectCard>
 <ProjectCard
-  title="Adding a Draft Feature to Gatsby"
-  link="https://www.lekoarts.de/garden/adding-a-draft-feature-to-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Sudoku Solver"
+  link="https://github.com/preston-lai/Sudoku-Solver"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  A solution with the createSchemaCustomization API.
+  Implemented a recursive backtracking algorithm and the Tkinler library to efficiently answer any unsolved Sudoku board.
 </ProjectCard>
 <ProjectCard
-  title="Theme UI Plugin for Figma"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
+  title="Dodge Game"
+  link="https://github.com/preston-lai/Dodge-Game"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-  The Theme UI plugin for Figma allows for a workflow where Theme UI is the
-  starting point both for design & development.
+  A game where you gain points by dodging blocks through moving left or right. Created using Python and PyGame.
 </ProjectCard>
