--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm LekoArts
+# Hey, I'm Preston Lai
 
-I'm a designer durned software engineer and write about JS & React at [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter)
+A student whose interested in Software Development!
